--- a/src/index.html
+++ b/src/index.html
@@ -217,7 +217,7 @@ medical data.
 
                 <div class='col-4 column'>
                     <img src='/static/christophe.jpg' />
-                    <h3 class='name'><span class='first'>C</span>ristophe <span class='second'>S</span>cholliers</h3>
+                    <h3 class='name'><span class='first'>C</span>hristophe <span class='second'>S</span>cholliers</h3>
                     <div class='bio'>
                       Prof. Dr. Christophe Scholliers, obtained a PhD in Computer Science from the Vrije Universiteit. His PhD titled "Ambient Contracts" was promoted by Wolfgang De Meuter (SOFT-VUB) and Éric Tanter (Pleiad-DCC). As a postdoctoral researcher he has focused on type systems for synchronisation and coordination of parallel programs. In October 2015 he was hired as a full-time professor at the department for Applied Mathematics, Informatics and Statistics where he is leading the Theory of Programming Languages Lab (TOPL) . His current interests are in programming languages, type systems and debuggers for parallel and distributed systems. When he is not programming he enjoys having a nice Belgium beer, playing some indoor soccer or learning Chinese.
                     </div>
@@ -381,8 +381,8 @@ This sequence synthesizes several years of industrial research towards building 
             </div>
 
             <div class='col-4 column'>
-                    <h3 class='name'><span class='first'>C</span>ristophe <span class='second'>S</span>cholliers</h3>
-                    <h4>Reactive programming, bananas, robots what to want more.</h4>
+                    <h3 class='name'><span class='first'>C</span>hristophe <span class='second'>S</span>cholliers</h3>
+                    <h4> Reactive programming, bananas, robots, what do you want more?</h4>
                 <div class='bio'>
 We live in an inherently reactive world, Newton already knew this in the 17th century and became famous by formulating this idea as a law. The programming language world is also slowly realising that reactivity should be a first class language construct.  Frameworks like Angular and Reactive extensions are popping up like mushrooms. Like many groundbreaking language features reactive programming had its origins in the functional programming world. In this talk I will give a gentle introduction to the world of functional reactive programming. Starting from the main principles we will build our own reactive programming library. Once we have done that we will look into a state of the art library and implement a simple  game. To put the cherry on the cake we will implement a small reactive program to control an MBot (educational robot).
                 </div>
@@ -523,7 +523,7 @@ We live in an inherently reactive world, Newton already knew this in the 17th ce
                   <time>16 - 17</time>
                   <div class='topic'>
                     <div class='name'>Christophe Scholliers</div>
-                    Reactive programming, bananas, robots what to want more.
+                    Reactive programming, bananas, robots, what do you want more?
                   </div>
                 </div>
 
