updated the schedule

--- a/src/index.html
+++ b/src/index.html
@@ -159,13 +159,6 @@ functional programming, Linux, and public speaking. Occasionally, he organizes
 meetups and conferences in and around Utrecht, The Netherlands.
                     </div>
                 </div>
-                <div class='col-4 column'>
-                    <img src='/static/marcinM.jpg' />
-                    <h3 class='name'><span class='first'>M</span>arcin <span class='second'>M</span>atuszak</h3>
-                    <div class='bio'>
-                        Marcin is an enthusiastic functional programmer from Wrocław. Working as a Data Engineer at Ryanair. His recent interest is a mix of machine learning and functional programming.
-                    </div>
-                </div>
             </div>
 
             <div class='row'>
@@ -308,14 +301,6 @@ Software Transactional Memory makes techniques pioneered in relational databases
                 </div>
             </div>
 
-
-            <div class='col-4 column'>
-                <h3 class='name'><span class='first'>M</span>arcin <span class='second'>M</span>atuszak</h3>
-                <h4>Introduction to functional optics</h4>
-                <div class='bio'>
-                    This talk is a introduction to functional optics using haskell. I will start with showing how to derive optics from basic principles. Then I'd like to show how it can simplify daily work and solve "real code" problems.
-                </div>
-            </div>
 
             <div class='col-4 column'>
                 <h3 class='name'><span class='first'>J</span>akub <span class='second'>Z</span>alewski</h3>
@@ -521,15 +506,6 @@ We live in an inherently reactive world, Newton already knew this in the 17th ce
                   </div>
                 </div>
 
-                <div class='slot'>
-                  <time>15 - 16</time>
-                  <div class='topic'>
-                    <div class='name'>Laurens Duijvesteijn</div>
-                    An Introduction to Software Transactional Memory
-                    <span class='part'>3/5</span>
-                  </div>
-                </div>
-
                 <div class='slot noborder'>
                   <time>16 - 17</time>
                   <div class='topic'>
@@ -630,11 +606,12 @@ We live in an inherently reactive world, Newton already knew this in the 17th ce
                 <div class='slot'>
                   <time>12 - 13</time>
                   <div class='topic'>
-                    <div class='name'>Marcin Matuszak</div>
-                    Introduction to functional optics
-                    <span class='part'>1/4</span>
+                    <div class='name'>Laurens Duijvesteijn</div>
+                    An Introduction to Software Transactional Memory
+                    <span class='part'>3/5</span>
                   </div>
                 </div>
+
 
                 <div class='slot'>
                   <time>13 - 14</time>
@@ -644,15 +621,6 @@ We live in an inherently reactive world, Newton already knew this in the 17th ce
                 <div class='slot'>
                   <time>14 - 15</time>
                   <div class='topic'>
-                    <div class='name'>Marcin Matuszak</div>
-                    Introduction to functional optics
-                    <span class='part'>2/4</span>
-                  </div>
-                </div>
-
-                <div class='slot'>
-                  <time>15 - 16</time>
-                  <div class='topic'>
                     <div class='name'>Carter Schonwald</div>
                     Modeling protocols with linear dependent types
                     <span class='part'>3/4</span>
@@ -660,7 +628,7 @@ We live in an inherently reactive world, Newton already knew this in the 17th ce
                 </div>
 
                 <div class='slot noborder'>
-                  <time>16 - 17</time>
+                  <time>15 - 16</time>
                   <div class='topic'>
                     <div class='name'>Carter Schonwald</div>
                     Modeling protocols with linear dependent types
@@ -994,20 +962,21 @@ We live in an inherently reactive world, Newton already knew this in the 17th ce
                 <div class='slot'>
                   <time>10 - 11</time>
                   <div class='topic'>
-                    <div class='name'>Marcin Matuszak</div>
-                    Introduction to functional optics
+                    <div class='name'>Piotr Radwan</div>
+                    Neural Networks as Category: in-depth Haskell implementation tutorial
                     <span class='part'>3/4</span>
                   </div>
                 </div>
 
-                <div class='slot'>
+                <div class='slot noborder'>
                   <time>11 - 12</time>
                   <div class='topic'>
-                    <div class='name'>Marcin Matuszak</div>
-                    Introduction to functional optics
+                    <div class='name'>Piotr Radwan</div>
+                    Neural Networks as Category: in-depth Haskell implementation tutorial
                     <span class='part'>4/4</span>
                   </div>
                 </div>
+
 
                 <div class='slot'>
                   <time>12 - 13</time>
@@ -1033,22 +1002,13 @@ We live in an inherently reactive world, Newton already knew this in the 17th ce
                 </div>
 
                 <div class='slot'>
-                  <time>15 - 16</time>
+                  <time>15 - 17</time>
                   <div class='topic'>
-                    <div class='name'>Piotr Radwan</div>
-                    Neural Networks as Category: in-depth Haskell implementation tutorial
-                    <span class='part'>3/4</span>
+                    <div class='name'>Discussion panel</div>
+                    Future of functional programming
                   </div>
                 </div>
 
-                <div class='slot noborder'>
-                  <time>16 - 17</time>
-                  <div class='topic'>
-                    <div class='name'>Piotr Radwan</div>
-                    Neural Networks as Category: in-depth Haskell implementation tutorial
-                    <span class='part'>4/4</span>
-                  </div>
-                </div>
               </div>
 
 
