added le hamburger

--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,25 @@
   </head>
 
   <body>
+    <div class='menu-bar closed'>
+        <img class='hamburger' src='./static/hamburger.svg' />
+        <div class='name'>Monadic Party 2019</div>
+
+        <div class='items'>
+          <div class='item'>
+              <a scroll-to='.about-us'>About the event</a>
+          </div>
+          <div class='item'>
+              <a scroll-to='.speakers'>Speakers</a>
+          </div>
+          <div class='item'>
+              <a href='#schedule'>Schedule</a>
+          </div>
+          <div class='item'>
+              <a scroll-to='.sign-up'>Sign up</a>
+          </div>
+        </div>
+    </div>
 
     <div class='header'>
       <div class='container'>
@@ -38,21 +57,6 @@
         <h3>=&lt;&lt;  Monadic Party &gt;&gt;=</h3>
 
         <h3 class='promo'>Five days of Haskell nerding. Lunch included. Bring your laptop</h3>
-
-        <div class='row'>
-            <div class='col-3 item'>
-                <a scroll-to='.about-us'>About the event</a>
-            </div>
-            <div class='col-3 item'>
-                <a scroll-to='.speakers'>Speakers</a>
-            </div>
-            <div class='col-3 item'>
-                <a href='#schedule'>Schedule</a>
-            </div>
-            <div class='col-3 item'>
-                <a scroll-to='.sign-up'>Sign up</a>
-            </div>
-        </div>
       </div>
     </div>
 
