--- a/src/index.html
+++ b/src/index.html
@@ -235,7 +235,8 @@
     <div class='sign-up'>
         <div class='container'>
 
-<div style="width:100%; text-align:left;"><iframe src="https://eventbrite.com/tickets-external?eid=41355832408&ref=etckt" frameborder="0" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:12px; padding:10px 0 5px; margin:2px; width:100%; text-align:left;" ></div></div>
+        <div style="width:100%; text-align:left;"><iframe src="https://eventbrite.com/tickets-external?eid=53009325319&ref=etckt" frameborder="0" height="445" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe><div style="font-family:Helvetica, Arial; font-size:12px; padding:10px 0 5px; margin:2px; width:100%; text-align:left;" ></div></div>
+
 
             <div class='col-12 column email'>
                 Got a question? Email us at
