updated color and pictures

--- a/src/index.html
+++ b/src/index.html
@@ -104,14 +104,14 @@
                     </div>
                 </div>
                 <div class='col-4 column'>
-                    <img src='/static/empty.png' />
+                    <img src='/static/kmett.jpg' />
                     <h3 class='name'><span class='first'>E</span>dward <span class='second'>K</span>mett</h3>
                     <div class='bio'>
                       Research Engineer at <a href='https://intelligence.org/'>Machine Intelligence Research Institute</a>. 
                     </div>
                 </div>
                 <div class='col-4 column'>
-                    <img src='/static/empty.png' />
+                    <img src='/static/alexey.jpg' />
                     <h3 class='name'><span class='first'>A</span>lexey <span class='second'>K</span>uleshevich</h3>
                     <div class='bio'>
                       Software Engineer at <a href='https://www.fpcomplete.com'>FP Complete</a>
@@ -121,7 +121,7 @@
 
             <div class='row'>
                 <div class='col-4 column'>
-                    <img src='/static/empty.png' />
+                    <img src='/static/justin.jpg' />
                     <h3 class='name'><span class='first'>J</span>ustin <span class='second'>W</span>oo</h3>
                     <div class='bio'>
                       PureScript and memes
@@ -170,7 +170,7 @@
 
             <div class='row'>
                 <div class='col-4 column'>
-                    <img src='/static/empty.png' />
+                    <img src='/static/arian.jpg' />
                     <h3 class='name'><span class='first'>A</span>rian van <span class='second'>P</span>utten</h3>
                     <div class='bio'>
                       Maintainer of <a href='https://haskell-servant.github.io/'>Servant</a>
