--- a/src/index.html
+++ b/src/index.html
@@ -104,10 +104,10 @@
                     </div>
                 </div>
                 <div class='col-4 column'>
-                    <img src='/static/kmett.jpg' />
-                    <h3 class='name'><span class='first'>E</span>dward <span class='second'>K</span>mett</h3>
+                    <img src='/static/krzysiek.jpg' />
+                    <h3 class='name'><span class='first'>K</span>rzysztof <span class='second'>G</span>ogolewski</h3>
                     <div class='bio'>
-                      Research Engineer at <a href='https://intelligence.org/'>Machine Intelligence Research Institute</a>. 
+                      Works on Linear Types in GHC at <a href='https://www.tweag.io/'>Tweag</a>
                     </div>
                 </div>
                 <div class='col-4 column'>
@@ -135,20 +135,20 @@
                     </div>
                 </div>
                 <div class='col-4 column'>
-                    <img src='/static/krzysiek.jpg' />
-                    <h3 class='name'><span class='first'>K</span>rzysztof <span class='second'>G</span>ogolewski</h3>
+                    <img src='/static/kmett.jpg' />
+                    <h3 class='name'><span class='first'>E</span>dward <span class='second'>K</span>mett</h3>
                     <div class='bio'>
-                      Works on Linear Types in GHC at <a href='https://www.tweag.io/'>Tweag</a>
+                      Research Engineer at <a href='https://intelligence.org/'>Machine Intelligence Research Institute</a>. 
                     </div>
                 </div>
             </div>
 
             <div class='row'>
                 <div class='col-4 column'>
-                    <img src='/static/tom.jpg' />
-                    <h3 class='name'><span class='first'>T</span>om Sydney <span class='second'>K</span>erckhove</h3>
+                    <img src='/static/christophe.jpg' />
+                    <h3 class='name'><span class='first'>C</span>ristophe <span class='second'>S</span>cholliers</h3>
                     <div class='bio'>
-                      Technical Lead at <a href='https://www.fpcomplete.com/'>FP Complete</a>
+                      Professor in computer science at the University of Gent
                     </div>
                 </div>
                 <div class='col-4 column'>
@@ -181,6 +181,13 @@
                     <h3 class='name'><span class='first'>O</span>leg <span class='second'>G</span>renrus</h3>
                     <div class='bio'>
                       Software developer at <a href='https://www.futurice.com/'>Futurice</a>, author of <a href='http://hackage.haskell.org/user/phadej'>many libraries</a>
+                    </div>
+                </div>
+                <div class='col-4 column'>
+                    <img src='/static/tom.jpg' />
+                    <h3 class='name'><span class='first'>T</span>om Sydney <span class='second'>K</span>erckhove</h3>
+                    <div class='bio'>
+                      Technical Lead at <a href='https://www.fpcomplete.com/'>FP Complete</a>
                     </div>
                 </div>
             </div>
