--- a/src/index.html
+++ b/src/index.html
@@ -87,7 +87,7 @@
 
               <p>We are deligted to offer a means based scholarship programme. If you are financially unable to attend the summer school, we have a number of fully funded places available. Everything needed for you to attend is covered - travel to the event, accommodation and the ticket itself. The first edition was really successful, so we're really happy that we can continue offering it this year as well.</p>
               <h4 class='external-btn'>
-                <a class="button button-primary" href="https://docs.google.com/forms/d/e/1FAIpQLSe33Vjdye8o8XVqC_varG5BzqM0T1Sa5J1-oqogVDSRUhRtJg/viewform" target='_blank'>Apply for a scholarship</a>
+                <a class="button button-primary" href="https://docs.google.com/forms/d/1nYEHCLcGpZrSxtNrPfiEM9s9DNbABN1ccyi1r1mS05s" target='_blank'>Apply for a scholarship</a>
               </h4>
               <h5>Deadline: 28th of February 2019</h5>
           </div>
@@ -205,7 +205,7 @@
         <p>Our summer school is not about making money, it's about spreading our love of Haskell and functional programming. Because of that we will cover accommodation costs along with a ticket to the event for all speakers.</p>
 
         <h2 class='external-btn'>
-          <a class="button button-primary" href="https://docs.google.com/forms/d/e/1FAIpQLScKD2T-5m8q4CahA-TBhdMH43ziTPv7op9j4_rcY9bZf_DWRg/viewform?usp=sf_link" target='_blank'>Submit a proposal</a>
+          <a class="button button-primary" href="https://docs.google.com/forms/d/1BCYcH0tn78qUQB0MOjueGqm8L1XCVvM32pvE1r1Ur2E" target='_blank'>Submit a proposal</a>
         </h2>
 
         <h4>Deadline: 28th of February 2019</h4>
