last years link

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
         <h1>Haskell Summer School</h1>
         <h3>=&lt;&lt;  Monadic Party &gt;&gt;=</h3>
 
-        <h3 class='promo'>Four days of Haskell hacking. Lunch included. Bring your laptop</h3>
+        <h3 class='promo'>Four days of Haskell nerding. Lunch included. Bring your laptop</h3>
       </div>
     </div>
 
@@ -71,6 +71,8 @@
           <p>For the attendees that arrive on the 17th, and we have a preparty lined up. Check a signup email for more details.</p>
 
           <p>We chose Poznan to host the summer school because of its architecture, culture and nightlife. The venue is a recently restored lovely old building at <a href='http://mlynska12.pl/' target='_blank'>Mlynska 12</a> where we have the whole highest floor at our disposal. So the only thing you need is a ticket, laptop and a place to sleep and you're good to go. Catered lunch, tea and coffee is included in the ticket price.</p>
+
+          <p>Check out the <a href='https://2018.monadic.party' class='last-year' target='_blank'>last year's website</a>.</p>
 
           <h2 class='title left'><span class='first'>G</span>etting <span class='second'>T</span>here</h2>
 
