font weight increased

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 
     <title>Monadic Party</title>
     <link rel="stylesheet" href="/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono" rel="stylesheet">
   </head>
 
