added Olegs photo

--- a/src/index.html
+++ b/src/index.html
@@ -179,7 +179,7 @@
                     </div>
                 </div>
                 <div class='col-4 column'>
-                    <img src='/static/empty.png' />
+                    <img src='/static/phadej.jpg' />
                     <h3 class='name'><span class='first'>O</span>leg <span class='second'>G</span>renrus</h3>
                     <div class='bio'>
                       Software developer at <a href='https://www.futurice.com/'>Futurice</a>, author of <a href='http://hackage.haskell.org/user/phadej'>many libraries</a>
