--- a/src/index.html
+++ b/src/index.html
@@ -88,10 +88,8 @@
               <h2 class='title left'><span class='first'>S</span>cholarship <span class='second'>P</span>rogramme</h2>
 
               <p>We are deligted to offer a means based scholarship programme. If you are financially unable to attend the summer school, we have a number of fully funded places available. Everything needed for you to attend is covered - travel to the event, accommodation and the ticket itself. The first edition was really successful, so we're really happy that we can continue offering it this year as well.</p>
-              <h4 class='external-btn'>
-                <a class="button button-primary" href="https://docs.google.com/forms/d/1nYEHCLcGpZrSxtNrPfiEM9s9DNbABN1ccyi1r1mS05s" target='_blank'>Apply for a scholarship</a>
-              </h4>
-              <h5>Deadline: 28th of February 2019</h5>
+
+              <h5 class='center'>Scholarship applications are closed</h5>
           </div>
       </div>
 
@@ -193,11 +191,8 @@
 
         <p>Our summer school is not about making money, it's about spreading our love of Haskell and functional programming. Because of that we will cover accommodation costs along with a ticket to the event for all speakers.</p>
 
-        <h2 class='external-btn'>
-          <a class="button button-primary" href="https://docs.google.com/forms/d/1BCYcH0tn78qUQB0MOjueGqm8L1XCVvM32pvE1r1Ur2E" target='_blank'>Submit a proposal</a>
-        </h2>
 
-        <h4>Deadline: 28th of February 2019</h4>
+        <h4 class='center'>CFP is closed now</h4>
       </div>
     </div>
 
