added non-cfp talk titles

--- a/src/index.html
+++ b/src/index.html
@@ -167,32 +167,227 @@
                 </div>
             </div>
 
-            <div class='row'>
-                <div class='col-4 column'>
-                </div>
-                <div class='col-4 column'>
-                    <img src='/static/arian.jpg' />
-                    <h3 class='name'><span class='first'>A</span>rian van <span class='second'>P</span>utten</h3>
-                    <div class='bio'>
-                      Maintainer of <a href='https://haskell-servant.github.io/'>Servant</a>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 
-    <div class='call-for-speakers'>
+    <div class='talks'>
       <div class='container'>
-        <h2 class='title left'><span class='first'>C</span>all for <span class='second'>S</span>peakers</h2>
+        <h1 class='title'><span class='first'>T</span>alk <span class='second'>T</span>itles</h1>
 
-        <p>Do you want to lead workshops at the summer school? We would love to invite you to be a speaker at our event.</p>
+        <div id='talk-titles'>
+          <div class='talk'>
+            <div class='header'>
+              <div class='level'>
+                <span class='badge badge-success'>Beginner</span>
+              </div>
+              <h4 class='author'>Christophe Scholliers:</h4> 
+              <h4 class='title'>A project based approach to learning Haskell</h4>
+            </div>
 
-        <p>We are looking for people interested in leading workshops spanning four to six slots on various topics in the Haskell ecosystem. Slots take fifty minutes and can be allocated together or spread over a couple days, depending on your preference. We will have three tracks, a beginners one that caters to programmers that have limited Haskell experience and two for people who are comfortable with the language and want to learn new concepts. We will allocate your talk to a track that fits it best based on your answers on the submission form.</p>
+            <div class='details closed'>
+              <h4>Abstract</h4>
+              <div class='abstract'>
+                This track consists of a crash introduction to Haskell, in two parts of theory and practice. In the theory, we start from scratch and finish with the concepts of functions, type classes and algebraic data types. Armed with this knowledge we switch to the exercise track where we will implement two small games: Snake and Tetris. 
+              </div>
 
-        <p>Our summer school is not about making money, it's about spreading our love of Haskell and functional programming. Because of that we will cover accommodation costs along with a ticket to the event for all speakers.</p>
+              <h4>About the speaker</h4>
+              <div class='speaker'>
+                Christophe Scholliers is professor in foundations of programming languages at Ghent University. His current research is mainly situated in the field of parallel and distributed programming language abstractions.
+              </div>
+            </div>
+          </div>
+
+          <div class='talk'>
+            <div class='header'>
+              <div class='level'>
+                <span class='badge badge-success'>Beginner</span>
+              </div>
+              <h4 class='author'>Ryan Moore:</h4> 
+              <h4 class='title'>Practical Cryptography with Haskell</h4>
+            </div>
+
+            <div class='details closed'>
+              <h4>Abstract</h4>
+              <div class='abstract'>
+Students will spend 6 sessions learning to apply practical Haskell programming techniques to the field of cryptography. Together we will explore the fundamental building blocks of modern cryptographic and functional programming techniques. We will focus on domain driven development leveraging the powerful type system of Haskell. Beginner Haskellers are welcomed, but should have a working knowledge of basics, for example function definition and application, where and let blocks. We will explore the following topics: discrete probability, the one time pad, pseudorandom generators, building attacks on ciphers, as well as exploring real world stream ciphers. This will be a fun, and hands on course that will combine lectures focusing on Haskell and Cryptography fundamentals with hands on exercises, projects, and a capstone. Students will leave feeling confident in leveraging Haskell’s type system, writing their own types, using instances of functors, monoids and applicative and take away experience writing and breaking cryptography algorithms.
+              </div>
+
+              <h4>About the speaker</h4>
+              <div class='speaker'>
+                Ryan Moore is a lead engineer at MX - company dedicated to democratizing financial data. He has been programming Haskell for 3 years and loves it for its rigor, playfulness & consistency. 
+              </div>
+            </div>
+          </div>
+
+          <div class='talk'>
+            <div class='header'>
+              <div class='level'>
+                <span class='badge badge-success'>Beginner</span>
+              </div>
+              <h4 class='author'>Justin Woo:</h4> 
+              <h4 class='title'>Real World PureScript</h4>
+            </div>
+
+            <div class='details closed'>
+              <h4>Abstract</h4>
+              <div class='abstract'>
+                In these sessions, Justin will go through various techniques used to make "Real World" applications work in PureScript. Topics will include FFI, using PureScript outputs from JavaScript, and various ways Row Type Classes can be used, whether to create a clean PureScript library or to provide more powerful interfaces for weakly-typed JavaScript libraries. Participants will walk away understanding how libraries like Simple-JSON and React-Basic work.
+              </div>
+
+              <h4>About the speaker</h4>
+              <div class='speaker'>
+Justin is a Korean-American living in Helsinki. In his previous life, he was a materials science student researcher, using lab equipment to create and characterize superhydrophic surfaces. He now works with PureScript on browsers and AWS Lambda. Justin is best known not for his PureScript ecosystem work or educational blog posts, but for his memes on Twitter.
+              </div>
+            </div>
+          </div>
+
+          <div class='talk'>
+            <div class='header'>
+              <div class='level'>
+                <span class='badge badge-success'>Beginner</span>
+              </div>
+              <h4 class='author'>Tom Sydney Kerckhove:</h4> 
+              <h4 class='title'>Testing for beginners</h4>
+            </div>
+
+            <div class='details closed'>
+              <h4>Abstract</h4>
+              <div class='abstract'>
+                TBA
+              </div>
+
+              <h4>About the speaker</h4>
+              <div class='speaker'>
+                Professional Weirdo, more at <a href='https://cs-syd.eu' target='_blank'>https://cs-syd.eu</a>
+              </div>
+            </div>
+          </div>
+
+          <div class='talk'>
+            <div class='header'>
+              <div class='level'>
+                <span class='badge badge-intermediate'>Intermediate</span>
+              </div>
+              <h4 class='author'>Oleg Grenrus:</h4> 
+              <h4 class='title'>Nitty-gritty details of programming language implementation</h4>
+            </div>
+
+            <div class='details closed'>
+              <h4>Abstract</h4>
+              <div class='abstract'>
+                <p>In a short talk, it's impossible to dive into details of such large topic as implementing a programming language. Fortunately, there's plenty of time at Monadic Party to discuss some nitty-gritty details.</p>
+
+                <p>We will walk through a "real" programming language implementation, not very sophisticated but not a toy anymore, something like Dhall or Elm.</p>
+
+                <p>We'll discuss parsing various kind of syntax, working with abstract syntax trees, implementation of a type inference, and most importantly: this time good error reporting won't be left as an exercise.</p>
+
+                <p>And if time allows, we'll see what cool features we could add to a language, and what problems that poses to the implementation.</p>
+              </div>
+
+              <h4>About the speaker</h4>
+              <div class='speaker'>
+                Haskell Consultant at <a href='https://www.well-typed.com' target='_blank'>Well Typed</a>, author of <a href='http://hackage.haskell.org/user/phadej' target='_blank'>many libraries</a>.
+              </div>
+            </div>
+          </div>
+
+          <div class='talk'>
+            <div class='header'>
+              <div class='level'>
+                <span class='badge badge-intermediate'>Intermediate</span>
+              </div>
+              <h4 class='author'>Alexey Kuleshevich:</h4> 
+              <h4 class='title'>Haskell arrays with massiv</h4>
+            </div>
+
+            <div class='details closed'>
+              <h4>Abstract</h4>
+              <div class='abstract'>
+                <p>If you are not used to the pure functional paradigm, then dealing with arrays in Haskell can be very unintuitive, the code you write can become inefficient, especially if you choose the wrong library or an incorrect data structure for the job.</p>
+
+                <p>Throughout the series of talks and workshops I will cover some concepts about native arrays that every Haskell programmer should understand as well as provide concrete examples on how to deal with multidimensional arrays using the `massiv` library. First lectures will start with basic topics, such as memory representations and how to properly handle mutation. Then we will transition into more advanced notions of fusion, stencils and other ways of avoiding unnecessary computation, while taking advantage of automatic parallelization. Besides looking at many simple examples we will have hands on experience developing a more complex application that will reinforce the understanding of concepts introduced earlier.</p>
+              </div>
+
+              <h4>About the speaker</h4>
+              <div class='speaker'>
+                I have a master's degree in computer science from University of New Mexico. Currently work as a Software Engineer at FP Complete and have been for the past three years. Lately I’ve been spending a lot of time in the blockchain domain, but the types of projects I normally tackle at work vary drastically. Enjoy traveling, drinking beer and any free time I do find I tend to spend working on open source Haskell projects.
+              </div>
+            </div>
+          </div>
 
 
-        <h4 class='center'>CFP is closed now</h4>
+          <div class='talk'>
+            <div class='header'>
+              <div class='level'>
+                <span class='badge badge-intermediate'>Intermediate</span>
+              </div>
+              <h4 class='author'>Laurens Duijvesteijn:</h4> 
+              <h4 class='title'>Haskell for boring software</h4>
+            </div>
+
+            <div class='details closed'>
+              <h4>Abstract</h4>
+              <div class='abstract'>
+                <p>Haskell is fantastic for industry use. The language can give you some nice correctness guarantees. This peace of mind can make software feel boring (in a good way). I want to convince you of this claim.</p>
+
+                <p>In this talk/workshop series, I'll show you how to write small but useful applications in Haskell. We'll talk about common patterns you need in a production setting (e.g. JSON, HTTP, and databases).</p>
+              </div>
+
+              <h4>About the speaker</h4>
+              <div class='speaker'>
+                DevOps Lead at Channable. Builds internal tooling. Likes his types as is his   
+coffee: strong.
+              </div>
+            </div>
+          </div>
+
+          <div class='talk'>
+            <div class='header'>
+              <div class='level'>
+                <span class='badge badge-advanced'>Advanced</span>
+              </div>
+              <h4 class='author'>Edward Kmett:</h4> 
+              <h4 class='title'>Guanxi - Logic Programming in Haskell</h4>
+            </div>
+
+            <div class='details closed'>
+              <h4>Abstract</h4>
+              <div class='abstract'>
+                I'll be giving a tour of the current state of the 'guanxi' library in Haskell. This is a framework I'm building for logic programming in the style of mini-Kanren.
+              </div>
+
+              <h4>About the speaker</h4>
+              <div class='speaker'>
+                I write a lot of Haskell.
+              </div>
+            </div>
+          </div>
+
+          <div class='talk'>
+            <div class='header'>
+              <div class='level'>
+                <span class='badge badge-advanced'>Advanced</span>
+              </div>
+              <h4 class='author'>Krzysztof Gogolewski:</h4> 
+              <h4 class='title'>Linear types</h4>
+            </div>
+
+            <div class='details closed'>
+              <h4>Abstract</h4>
+              <div class='abstract'>
+                GHC is getting linear types. I'll cover how you can use them, which of the common functions and classes can be made linear, interactions with other features of the language, theoretical underpinnings, future directions.
+              </div>
+
+              <h4>About the speaker</h4>
+              <div class='speaker'>
+                Software engineer at Tweag, currently working at implementation of linear types in GHC.
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <h3 class='timer'>More titles released in <span class='countdown'></span></h3>
       </div>
     </div>
 
@@ -249,6 +444,5 @@
         </div>
     </div>
 
-    <script src='/main.js'></script>
   </body>
 </html>
