--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
               <a scroll-to='.speakers'>Speakers</a>
           </div>
           <div class='item'>
-              <a scroll-to='.call-for-speakers'>Call for speakers</a>
+              <a scroll-to='.talks'>Talks</a>
           </div>
           <div class='item'>
               <a scroll-to='.sign-up'>Sign up</a>
@@ -393,7 +393,7 @@ coffee: strong.
 
     <div class='partners'>
         <div class='container'>
-          <h1>=&lt;&lt; Partners &gt;&gt;=</h1>
+          <h2>=&lt;&lt; Partners &gt;&gt;=</h2>
           <div class='row'>
 
             <div class='col-4 column'>
