updated oleg's bio

--- a/src/index.html
+++ b/src/index.html
@@ -155,7 +155,7 @@
                     <img src='/static/phadej.jpg' />
                     <h3 class='name'><span class='first'>O</span>leg <span class='second'>G</span>renrus</h3>
                     <div class='bio'>
-                      Software developer at <a href='https://www.futurice.com/'>Futurice</a>, author of <a href='http://hackage.haskell.org/user/phadej'>many libraries</a>
+                      Haskell Consultant at <a href='https://www.well-typed.com' target='_blank'>Well Typed</a>, author of <a href='http://hackage.haskell.org/user/phadej' target='_blank'>many libraries</a>.
                     </div>
                 </div>
                 <div class='col-4 column'>
